--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 @devops:registry = http://registry.devops.canway.com/
-sass_binary_site = https://registry.npmmirror.com/mirrors/node-sass/
-phantomjs_cdnurl = https://registry.npmmirror.com/mirrors/phantomjs/
-electron_mirror = https://registry.npmmirror.com/mirrors/electron/
+sass_binary_site = https://npm.taobao.org/mirrors/node-sass/
+phantomjs_cdnurl = https://npm.taobao.org/mirrors/phantomjs/
+electron_mirror = https://npm.taobao.org/mirrors/electron/
